--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "nodemon": "^2.0.7"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.12.2",
     "multer": "^1.4.2",
     "pug": "^3.0.2"
   }
