--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "nodemon": "^2.0.7"
   },
   "dependencies": {
+    "connect-ensure-login": "^0.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
