--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "ui": "browser-sync start --config bs-config.js"
   },
   "author": "Kakooza Abraham Jerry",
   "license": "ISC",
   "devDependencies": {
+    "browser-sync": "^2.26.14",
     "nodemon": "^2.0.7"
   },
   "dependencies": {
